# flat-2020-practice1

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  main_test.cpp
include/: Init.h  RegexpStackMachine.h  State.h
src/: RegexpStackMachine.cpp  State.cpp
